frontend/src/components/MediaPlayer/ShareDialog.module.scss
@import '../../globals';

.shareDialog {
  margin: 0;
  color: white;
  background-color: #222;
  border: none;
  border-radius: 0.5em;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
  z-index: 100;

  label {
    display: block;
    margin-bottom: 0.5em;
  }

  input[type=checkbox] {
    margin: 0 0.5em 0 0;
  }

  .shareActions {
    display: flex;
    justify-content: space-between;
    margin-top: 1em;

    button {
      display: flex;
      align-items: center;
      padding: 0;
      border: none;

      &:hover {
        filter: brightness(1.4);
      }

      &.close {
        img {
          height: 1.5em;
          margin-right: 0.2em;
        }
      }

      &.copyLink {
        color: $primary-blue-lighter;

        &.copied {
          color: $tertiary-green-lighter;

          img {
            height: 1.3em;
          }
        }

        img {
          height: 1.1em;
          margin-right: 0.4em;
        }
      }
    }
  }
}

.bgMask {
  position: fixed;
  top: 0; right: 0; bottom: 0; left: 0;
  z-index: 1;
  background-color: rgba(0, 0, 0, 0.4);
}

